--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">О компании</a>
+                <a class="nav-link" href="#about-company">О компании</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Продукция</a>
+                <a class="nav-link" href="#production">Продукция</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Объекты</a>
+                <a class="nav-link" href="#objects">Объекты</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="#contacts">Контакты</a>
               </li>
             </ul>
             <div>
-              <a class="main-header__login" href="#">Оставить заявку</a>
+              <a class="main-header__login" href="#feedback">Оставить заявку</a>
             </div>
           </div>
         </div>
@@ -52,10 +52,10 @@
       <div class="container">
         <div class="intro-section">
           <div class="row align-items-center justify-content-center">
-            <div class="col-md-6 col-sm-12 intro-text">
+            <div class="col-lg-6 col-md-12 col-sm-12 intro-text">
               <div class="intro__main">
                 <h1>Тюменский лифтовой завод</h1>
-                <p>Основан в 2010 году и входит в Группу Компаний "Импорт-Лифт". </p>
+                <p>Основан в 2010 году и входит в Группу Компаний "Импорт-Лифт".</p>
               </div>
               <div class="intro__address">
                 <h2>Адрес</h2>
@@ -63,7 +63,7 @@
                   625031, РФ, г. Тюмень, ул. Дружбы, 113</p>
               </div>
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="form-section">
                 <p>Заказать звонок с сайта</p>
                 <form action="" method="post">
@@ -126,7 +126,7 @@
 
     <!-- О компании -->
 
-    <section class="site-section about-company background-light">
+    <section class="site-section about-company background-light" id="about-company">
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="col-md-7 col-sm-12">
@@ -144,11 +144,9 @@
       </div>
     </section>
 
-    <!-- Что мы предлагаем -->
-
-    <section class="site-section service">
+    <section class="site-section service" id="production">
       <div class="container">
-        <div class="row justify-content-center mb-5">
+        <div class="row justify-content-center">
           <div class="col-md-10 col-lg-6">
             <div class="section-heading text-center">
               <h2>Продукция</h2>
@@ -229,84 +227,7 @@
       </div>
     </section>
 
-    <!-- Этапы внедрения -->
-
-    <!-- <section class="site-section stages">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8">
-            <div class="section-heading text-center">
-              <h2>Этапы внедрения</h2>
-              <p></p>
-            </div>
-          </div>
-        </div>
-        <div class="row align-items-center justify-content-between">
-          <div class="col-lg-5 col-md-12 order-1 order-lg-0">
-            <img src="img/stages.png" alt="">
-          </div>
-          <div class="col-lg-6 col-md-12 order-0 order-lg-1">
-            <ul class="stages__list list-unstyled">
-              <li class="stages__item d-flex align-items-start mb-4">
-                <div class="stages__step">
-                  <span class="stages__icon stages__icon--request"></span>
-                </div>
-                <div class="stages__content">
-                  <span>Шаг 1</span>
-                  <h3>Заявка на демо доступ</h3>
-                  <p>Оставьте заявку на сайте и наш консультант свяжется с Вами для уточнения деталей</p>
-                </div>
-              </li>
-              <li class="stages__item d-flex align-items-start mb-4">
-                <div class="stages__step">
-                  <span class="stages__icon stages__icon--agreement"></span>
-                </div>
-                <div class="stages__content">
-                  <span>Шаг 2</span>
-                  <h3>Соглашение о пилотном проекте</h3>
-                  <p>Подписания соглашения о пилотном проекте в рамках конфиденциальности информации, предоставляется бесплатный доступ на 14 календарных дней</p>
-                  <a href="#">Скачать соглашение на пилотный прект</a>
-                </div>
-              </li>
-              <li class="stages__item d-flex align-items-start mb-4">
-                <div class="stages__step">
-                  <span class="stages__icon stages__icon--chat"></span>
-                </div>
-                <div class="stages__content">
-                  <span>Шаг 3</span>
-                  <h3>Взаимодействие в рамках пилотного проекта</h3>
-                  <p>Коллаборация в Telegramm для оперативного взаимодействия сторон, оказания методологической и консультационной поддержки. Обучение сотрудников</p>
-                </div>
-              </li>
-              <li class="stages__item d-flex align-items-start mb-4">
-                <div class="stages__step">
-                  <span class="stages__icon stages__icon--contract"></span>
-                </div>
-                <div class="stages__content">
-                  <span>Шаг 4</span>
-                  <h3>Заключение договора</h3>
-                  <p>После успешного пилотного проекта заключается договор на неопределенный срок сторонами</p>
-                </div>
-              </li>
-              <li class="stages__item d-flex align-items-start mb-4">
-                <div class="stages__step">
-                  <span class="stages__icon stages__icon--support"></span>
-                </div>
-                <div class="stages__content">
-                  <span>Шаг 5</span>
-                  <h3>Поддержка 24/7</h3>
-                  <p>Специалисты осуществляют поддержку системы Арпикон - как консультационную так и технологическую, цель которой - повысить ваш потенциал для роста эффективности работ и управления</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- Объекты -->
-
-    <section class="site-section objects background-light">
+    <section class="site-section objects background-light" id="objects">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-12">
@@ -371,8 +292,8 @@
 
     <section class="site-section feedback">
       <div class="container">
-        <div class="row align-items-center justify-content-between mb-5">
-          <div class="col-md-6 col-sm-12">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg-6 col-md-12 col-sm-12" id="contacts">
             <div class="section-heading">
               <h2>Свяжитесь с нами</h2>
               <p><br> ООО «Тюменский лифтовой завод»
@@ -394,7 +315,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-lg-5 col-md-12 col-sm-12" id="feedback">
             <form class="form" method="post">
               <div class="form__field">
                 <label class="form__title form__title--fio" for="name1">ФИО <span>*</span></label>
@@ -425,7 +346,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <p>Copyright © 2004 — 2017 ООО «Тюменский лифтовой завод»</p>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12 main-footer__social-section">
             <div class="row align-items-center">
               <div class="col-12">
                 <ul class="list-unstyled mb-lg-0 justify-content-center">
