--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Тюменский лифтовый завод</title>
@@ -9,16 +10,22 @@
   <link rel="preload" href="fonts/Exo2-VariableFont_wght.woff2" as="font" type="font/woff2">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/leaflet.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="page__body">
 
   <header class="main-header w-100">
     <div class="container">
       <nav class="navbar navbar-expand-lg sticky-header">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/img.svg" width="100" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">
+            <img src="img/logo.svg" width="60" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -37,7 +44,7 @@
               </li>
             </ul>
             <div>
-              <a class="main-header__login" href="#feedback">Оставить заявку</a>
+              <a class="main-header__login" href="#feedback">Отправить сообщение</a>
             </div>
           </div>
         </div>
@@ -54,8 +61,8 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 col-md-12 col-sm-12 intro-text">
               <div class="intro__main">
-                <h1>Тюменский лифтовой завод</h1>
-                <p>Основан в 2010 году и входит в Группу Компаний "Импорт-Лифт".</p>
+                <h1>ООО «Тюменский лифтовой завод»</h1>
+                <p>Приветствует Вас на сайте нашего предприятия!</p>
               </div>
               <div class="intro__address">
                 <h2>Адрес</h2>
@@ -66,14 +73,16 @@
             <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="form-section">
                 <p>Заказать звонок с сайта</p>
-                <form action="" method="post">
+                <form id="form-header" method="post">
                   <label class="form-section__label form-section__label--name" for="name">Имя <span>*</span></label>
                   <input type="text" name="name" id="name" placeholder="Введите имя" required>
-                  <label class="form-section__label form-section__label--phone" for="phone">Телефон <span>*</span></label>
+                  <label class="form-section__label form-section__label--phone" for="phone">Телефон
+                    <span>*</span></label>
                   <input type="text" name="phone" id="phone" placeholder="Введите телефон" required>
                   <label class="form-section__label form-section__label--email" for="email">Email <span>*</span></label>
                   <input type="email" name="email" id="email" placeholder="Введите email" required>
-                  <button type="submit" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Заказать</button>
+                  <button type="submit" class="btn btn-primary" data-toggle="modal"
+                    data-target=".bd-example-modal-sm">Заказать</button>
                 </form>
               </div>
             </div>
@@ -132,7 +141,12 @@
           <div class="col-md-7 col-sm-12">
             <div class="section-heading">
               <h2 class="mb-3">О компании</h2>
-              <p> "Тюменский лифтовой завод" основан в 2010 году и входит в Группу Компаний "Импорт-Лифт". Накопив огромный опыт установки лифтов разных производителей и превратив его в конкретные инженерные решения, Группа Компаний "Импорт-Лифт совместно с ОАО "Могилёвлифтмаш" приступила к выпуску собственного лифтового оборудования, используя последние инновации в данной сфере. Основное направление производства - современные пассажирские лифты категорий "эконом", предназначенные для застройки жилых массивов, для замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации. </p>
+              <p> "Тюменский лифтовой завод" основан в 2010 году и входит в Группу Компаний "Импорт-Лифт". Накопив
+                огромный опыт установки лифтов разных производителей и превратив его в конкретные инженерные решения,
+                Группа Компаний "Импорт-Лифт совместно с ОАО "Могилёвлифтмаш" приступила к выпуску собственного
+                лифтового оборудования, используя последние инновации в данной сфере. Основное направление производства
+                - современные пассажирские лифты категорий "эконом", предназначенные для застройки жилых массивов, для
+                замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации. </p>
             </div>
           </div>
           <div class="col-md-4 col-sm-12">
@@ -149,14 +163,36 @@
         <div class="row justify-content-center">
           <div class="col-md-10 col-lg-6">
             <div class="section-heading text-center">
-              <h2>Продукция</h2>
+              <h2>Услуги</h2>
               <p></p>
             </div>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-12">
-            <ul class="text-center list-unstyled mb-0">
+            <ul class="list-unstyled mb-0">
+              <li>
+                <h3>Обрамление</h3>
+                <p>Обрамление лифтового портала — это защитно-декоративная конструкция из стали, которая закрывает щели
+                  между шахтой и дверью лифта в лифтовых холлах и защищает торцы откосов в процессе эксплуатации лифта.
+                </p>
+              </li>
+              <li>
+                <h3>Доставка</h3>
+                <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
+              </li>
+              <li>
+                <h3>Модернизация кабины</h3>
+                <p>Работа по модернизации кабины лифта от любого производителя. С сохранением всех его основных
+                  технических параметров. </p>
+              </li>
+              <li>
+                <h3>Изготовление противопожарных дверей шахт, кабин, люков для машинных отделений</h3>
+                <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с
+                  использованием качественных материалов</p>
+              </li>
+            </ul>
+            <!-- <ul class="text-center list-unstyled mb-0">
               <li>
                 <h3>ЛП-401Р</h3>
                 <div class="service__row">
@@ -221,7 +257,7 @@
                   <p>Размер шахты</p><span>1400x1600</span>
                 </div>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -242,41 +278,51 @@
                     <div class="carousel-item active">
                       <ul class="text-center list-unstyled mb-0">
                         <li>
-                          <img src="img/objects/object-1.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-1.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-2.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-2.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-3.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-3.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-4.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-4.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                       </ul>
                     </div>
                     <div class="carousel-item">
                       <ul class="intro__customer-logos text-center list-unstyled mb-0">
                         <li>
-                          <img src="img/objects/object-5.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-5.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-6.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-6.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-7.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-7.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                         <li>
-                          <img src="img/objects/object-8.jpg" width="150" height="200" class="img-fluid m-auto" alt="image">
+                          <img src="img/objects/object-8.jpg" width="150" height="200" class="img-fluid m-auto"
+                            alt="image">
                         </li>
                       </ul>
                     </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
@@ -290,7 +336,7 @@
 
     <!-- Обратная связь (Форма) -->
 
-    <section class="site-section feedback">
+    <section class="site-section feedback" id="feedback">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-12 col-sm-12" id="contacts">
@@ -315,8 +361,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-5 col-md-12 col-sm-12" id="feedback">
-            <form class="form" method="post">
+          <div class="col-lg-5 col-md-12 col-sm-12">
+            <form id="form-with-message" class="form" method="post">
               <div class="form__field">
                 <label class="form__title form__title--fio" for="name1">ФИО <span>*</span></label>
                 <input type="text" name="name1" id="name1" required>
@@ -329,14 +375,22 @@
                 <label class="form__title form__title--phone" for="phone1">Телефон</label>
                 <input type="tel" name="phone1" id="phone1">
               </div>
-              <button type="submit">Оставить заявку</button>
+              <div class="form-group form__field form__field--message">
+                <label class="form__title" for="message1">Сообщение</label>
+                <textarea class="form-control" name="message1" id="message1" rows="3"></textarea>
+              </div>
+              <!-- <div class="form__field">
+                <label class="form__title form__title--message" for="message1">Сообщение</label>
+                <textarea name="message1" id="message1" cols="30" rows="10"></textarea>
+              </div> -->
+              <button type="submit">Отправить сообщение</button>
             </form>
           </div>
         </div>
       </div>
     </section>
 
-
+    <div class="map" id="map" style="height: 480px;"></div>
   </main>
 
   <footer class="main-footer">
@@ -384,16 +438,24 @@
     </div>
   </footer>
 
-  <!-- <div class="tlz-modal tlz-modal--active">
+  <div class="tlz-modal tlz-modal--closed">
     <div class="tlz-modal__text">
       <p>Письмо отправлено</p>
       <img src="img/form-icons/ok.svg" alt="">
+    </div>
+  </div>
+
+  <div class="tlz-modal-error tlz-modal--closed">
+    <div class="tlz-modal__text">
       <p>Письмо не отправлено</p>
       <img src="img/form-icons/not-ok.svg" alt="">
     </div>
-  </div> -->
+  </div>
 
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/leaflet.js"></script>
+  <script src="https://unpkg.com/imask"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
