--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
           <div class="col-md-7 col-sm-12">
             <div class="section-heading">
               <h2 class="mb-3">О компании</h2>
-              <p> "Тюменский лифтовой завод" основан в 2010 году и входит в Группу Компаний "Импорт-Лифт". Накопив
-                огромный опыт установки лифтов разных производителей и превратив его в конкретные инженерные решения,
-                Группа Компаний "Импорт-Лифт совместно с ОАО "Могилёвлифтмаш" приступила к выпуску собственного
-                лифтового оборудования, используя последние инновации в данной сфере. Основное направление производства
-                - современные пассажирские лифты категорий "эконом", предназначенные для застройки жилых массивов, для
-                замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации. </p>
+              <p> Тюменский лифтовой завод" основан в 2010 году. Накопив огромный опыт установки лифтов разных
+                производителей и превратив его в конкретные инженерные решения, "Тюменский лифтовой завод" совместно с
+                ОАО "Могилёвлифтмаш" приступила к выпуску собственного лифтового оборудования, используя последние
+                инновации в данной сфере. Основное направление производства - современные пассажирские лифты категорий
+                "эконом", предназначенные для застройки жилых массивов, для замены и модернизации устаревших лифтов,
+                отработавших нормативный срок эксплуатации.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-12">
@@ -172,24 +172,119 @@
           <div class="col-12">
             <ul class="list-unstyled mb-0">
               <li>
-                <h3>Обрамление</h3>
-                <p>Обрамление лифтового портала — это защитно-декоративная конструкция из стали, которая закрывает щели
-                  между шахтой и дверью лифта в лифтовых холлах и защищает торцы откосов в процессе эксплуатации лифта.
-                </p>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-6">
+                    <h3>Модернизация кабин</h3>
+                    <p>Работа по модернизации кабины лифта от любого производителя</p>
+                  </div>
+                  <div class="col-6">
+                    <a target="_blank" href="./img/services/1.jpg">
+                      <img src="./img/services/1.jpg" alt="">
+                    </a>
+                  </div>
+                </div>
               </li>
               <li>
-                <h3>Доставка</h3>
-                <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-6">
+                    <a target="_blank" href="./img/services/2.jpg">
+                      <img src="./img/services/2.jpg" alt="">
+                    </a>
+                    <a target="_blank" href="./img/services/3.jpg">
+                      <img src="./img/services/3.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="col-6">
+                    <h3>Покраска, изготовление дверей</h3>
+                    <p>Устранение сколов, царапин, следов вандализма. Полная или частичная перекраска поверхностей</p>
+                  </div>
+                </div>
               </li>
               <li>
-                <h3>Модернизация кабины</h3>
-                <p>Работа по модернизации кабины лифта от любого производителя. С сохранением всех его основных
-                  технических параметров. </p>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-6">
+                    <h3>Обрамление</h3>
+                    <p>Обрамление лифтового портала — это защитно-декоративная конструкция из стали, которая закрывает
+                      щели
+                      между шахтой и дверью лифта</p>
+                  </div>
+                  <div class="col-6">
+                    <a target="_blank" href="./img/services/4.jpg">
+                      <img src="./img/services/4.jpg" alt="">
+                    </a>
+                  </div>
+                </div>
               </li>
               <li>
-                <h3>Изготовление противопожарных дверей шахт, кабин, люков для машинных отделений</h3>
-                <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с
-                  использованием качественных материалов</p>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-6">
+                    <a target="_blank" href="./img/services/10.jpg">
+                      <img src="./img/services/10.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="col-6">
+                    <h3>Заказ и доставка запасных частей</h3>
+                    <p>Поставка качественных запасных частей для лифтов по всей России от ведущих мировых и российских
+                      производителей</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-7">
+                    <h3>Изготовление пандусов для инвалидов и детских колясок</h3>
+                    <p>Устанавливаются при входе в различные здания, включая жилые дома, магазины, кинотеатры, больницы,
+                      вокзалы и т.д.</p>
+                  </div>
+                  <div class="col-5">
+                    <a target="_blank" href="./img/services/6.jpg">
+                      <img src="./img/services/6.jpg" alt="">
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-5">
+                    <a target="_blank" href="./img/services/7.jpg">
+                      <img src="./img/services/7.png" alt="">
+                    </a>
+                  </div>
+                  <div class="col-7">
+                    <h3>Изготовление инвалидных подъемников к подъездам</h3>
+                    <p>Производство по индивидуальным размерам на заказ.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-7">
+                    <h3>Изготовление противопожарных дверей шахт, кабин, люков для машинных отделений, ограждений</h3>
+                    <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с
+                      использованием качественных материалов</p>
+                  </div>
+                  <div class="col-5">
+                    <a target="_blank" href="./img/services/8.jpg">
+                      <img src="./img/services/8.jpg" alt="">
+                    </a>
+                    <a target="_blank" href="./img/services/9.jpg">
+                      <img src="./img/services/9.jpg" alt="">
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-4">
+                    <a target="_blank" href="./img/services/5.jpg">
+                      <img src="./img/services/5.jpg" alt="">
+                    </a>
+                  </div>
+                  <div class="col-8">
+                    <h3>Доставка</h3>
+                    <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ</p>
+                  </div>
+                </div>
               </li>
             </ul>
             <!-- <ul class="text-center list-unstyled mb-0">
