new photos, services

--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
                 <div class="row align-items-center justify-content-between">
                   <div class="col-6">
                     <a target="_blank" href="./img/services/2.jpg">
-                      <img src="./img/services/2.jpg" alt="">
+                      <img src="./img/services/2.jpg" alt="" width="160">
                     </a>
                     <a target="_blank" href="./img/services/3.jpg">
-                      <img src="./img/services/3.jpg" alt="">
+                      <img src="./img/services/3.jpg" alt="" width="200" height="210">
+                    </a>
+                    <a target="_blank" href="./img/services/izgotovleniye.jpg">
+                      <img src="./img/services/izgotovleniye.jpg" alt="" width="160">
                     </a>
                   </div>
                   <div class="col-6">
@@ -144,6 +147,9 @@
                     <a target="_blank" href="./img/services/4.jpg">
                       <img src="./img/services/4.jpg" alt="">
                     </a>
+                    <a target="_blank" href="./img/services/obramlenie.jpg">
+                      <img src="./img/services/obramlenie.jpg" height="205">
+                    </a>
                   </div>
                 </div>
               </li>
@@ -161,7 +167,7 @@
                   </div>
                 </div>
               </li>
-              <li>
+              <!-- <li>
                 <div class="row align-items-center justify-content-between">
                   <div class="col-7">
                     <h3>Изготовление пандусов для инвалидов и детских колясок</h3>
@@ -174,20 +180,7 @@
                     </a>
                   </div>
                 </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-5">
-                    <a target="_blank" href="./img/services/7.jpg">
-                      <img src="./img/services/7.png" alt="">
-                    </a>
-                  </div>
-                  <div class="col-7">
-                    <h3>Изготовление инвалидных подъемников к подъездам</h3>
-                    <p>Производство по индивидуальным размерам на заказ.</p>
-                  </div>
-                </div>
-              </li>
+              </li> -->
               <li>
                 <div class="row align-items-center justify-content-between">
                   <div class="col-7">
@@ -207,14 +200,40 @@
               </li>
               <li>
                 <div class="row align-items-center justify-content-between">
+                  <div class="col-5">
+                    <a target="_blank" href="./img/services/7.jpg">
+                      <img src="./img/services/7.png" alt="">
+                    </a>
+                  </div>
+                  <div class="col-7">
+                    <h3>Заказ и продажа инвалидных подъемников к подъездам.</h3>
+                    <p>Реализация продукции для МГН и инвалидов.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-8">
+                    <h3>Доставка</h3>
+                    <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
+                  </div>
                   <div class="col-4">
                     <a target="_blank" href="./img/services/5.jpg">
                       <img src="./img/services/5.jpg" alt="">
                     </a>
                   </div>
+                </div>
+              </li>
+              <li>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-4">
+                    <a target="_blank" href="./img/services/objects.jpg">
+                      <img src="./img/services/objects.jpg" alt="">
+                    </a>
+                  </div>
                   <div class="col-8">
-                    <h3>Доставка</h3>
-                    <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
+                    <h3>Принимаем заказы на изделия по облагораживанию дворовых объектов</h3>
+                    <!-- <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p> -->
                   </div>
                 </div>
               </li>
@@ -298,12 +317,12 @@
           <div class="col-md-7 col-sm-12">
             <div class="section-heading">
               <h2 class="mb-3">О компании</h2>
-              <p> Тюменский лифтовой завод" основан в 2010 году. Накопив огромный опыт установки лифтов разных
+              <p>«Тюменский лифтовой завод" основан в 2010 году. Накопив огромный опыт установки лифтов разных
                 производителей и превратив его в конкретные инженерные решения, "Тюменский лифтовой завод" совместно с
                 ОАО "Могилёвлифтмаш" приступила к выпуску собственного лифтового оборудования, используя последние
                 инновации в данной сфере. Основное направление производства - современные пассажирские лифты категорий
                 "эконом", предназначенные для застройки жилых массивов, для замены и модернизации устаревших лифтов,
-                отработавших нормативный срок эксплуатации.</p>
+                отработавших нормативный срок эксплуатации.«</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-12">
@@ -331,7 +350,7 @@
               <li class="efficiency__card">
                 <div class="card-header">
                   <img src="img/on-market.svg" width="80" alt="">
-                  <span>6 лет</span>
+                  <span>10 лет</span>
                 </div>
                 <p>На рынке</p>
               </li>
