--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="intro-section">
           <div class="row align-items-center justify-content-center">
-            <div class="col-lg-6 col-md-13 col-sm-13 intro-text">
+            <div class="col-lg-6 col-md-12 col-sm-12 intro-text">
               <div class="intro__main">
                 <h1>ООО «Тюменский лифтовой завод»</h1>
                 <p>Приветствует Вас на сайте нашего предприятия!</p>
@@ -70,7 +70,7 @@
                   635031, РФ, г. Тюмень, ул. Дружбы, 113</p>
               </div>
             </div>
-            <div class="col-lg-5 col-md-13 col-sm-13">
+            <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="form-section">
                 <p>Заказать звонок с сайта</p>
                 <form id="form-header" method="post">
@@ -481,7 +481,7 @@
     <section class="site-section about-company background-light" id="about-company">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col-md-7 col-sm-13">
+          <div class="col-md-7 col-sm-12">
             <div class="section-heading">
               <h3 class="mb-3">О компании</h3>
               <p>«Тюменский лифтовой завод" основан в 2010 году. Накопив огромный опыт установки лифтов разных
@@ -492,7 +492,7 @@
                 отработавших нормативный срок эксплуатации.«</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-13">
+          <div class="col-md-4 col-sm-12">
             <a href="img/sertificate.jpg">
               <img src="img/sertificate.jpg" height="350" alt="">
             </a>
@@ -512,7 +512,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-13 col-sm-13">
+          <div class="col-lg-12 col-sm-12">
             <ul class="efficiency__list text-center list-unstyled mb-0">
               <li class="efficiency__card">
                 <div class="card-header">
@@ -550,8 +550,8 @@
               <p></p>
             </div>
             <div class="row justify-content-center intro__clients">
-              <div class="service-card-block">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="service-card-block-carousel">
+                <div id="carouselExampleControls" class="carousel slide desktop" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <ul class="text-center list-unstyled mb-0">
@@ -605,6 +605,44 @@
                     <span class="visually-hidden">Next</span>
                   </button>
                 </div>
+                <div id="carouselExampleControlsMobile" class="carousel slide mobile" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="img/objects/object-1.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-3.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-3.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-4.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-5.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-6.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-7.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/objects/object-8.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsMobile"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsMobile"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -617,7 +655,7 @@
     <section class="site-section feedback" id="feedback">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-lg-6 col-md-13 col-sm-13" id="contacts">
+          <div class="col-lg-6 col-md-12 col-sm-12" id="contacts">
             <div class="section-heading">
               <h3>Свяжитесь с нами</h3>
               <p><br> ООО «Тюменский лифтовой завод»
@@ -639,7 +677,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-5 col-md-13 col-sm-13">
+          <div class="col-lg-5 col-md-12 col-sm-12">
             <form id="form-with-message" class="form" method="post">
               <div class="form__field">
                 <label class="form__title form__title--fio" for="name1">ФИО</label>
@@ -675,17 +713,17 @@
     <div class="main-footer__social">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6 col-md-6 col-sm-13">
-            <p>Copyright © 3004 — 3017 ООО «Тюменский лифтовой завод»</p>
+          <div class="col-lg-6 col-md-6 col-sm-12 main-footer__copyrights">
+            <p>Copyright © 2004 — 2017, ООО «Тюменский лифтовой завод»</p>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-13 main-footer__social-section">
+          <div class="col-lg-6 col-md-6 col-sm-12 main-footer__social-section">
             <div class="row align-items-center">
               <div class="service-card-block">
                 <ul class="list-unstyled mb-lg-0 justify-content-center">
                   <li>
                     <a href="#intro">
                       <span>Заказать звонок</span>
-                      <img src="img/social/mail.svg" width="35" alt="">
+                      <img src="img/social/mail.svg" width="24" alt="">
                     </a>
                   </li>
                   <!-- <li>
